# borsh-max-size

./: Cargo.toml  LICENSE.md  README.md
borsh-max-size/: Cargo.toml
borsh-max-size-derive/: Cargo.toml
borsh-max-size-derive/src/: lib.rs
borsh-max-size/src/: lib.rs
borsh-max-size/tests/: test.rs
