[package]
edition = "2021"
name = "borsh-max-size"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
borsh-max-size-derive = {version = "0.1.0", path = "../borsh-max-size-derive"}

[dependencies.arrayvec]
default_features = false
optional = true
version = "0.7.4"

[dependencies.solana-program]
default_features = false
optional = true
version = "1"

[lib]
